--- a/dashboard/src/public/css/styles.css
+++ b/dashboard/src/public/css/styles.css
@@ -37,31 +37,54 @@ body {
 /* ELEMENTOS DEL HEADER */
 header {
     display: flex;
-    background-color: var(--color-header);
-    height: 130px;
     align-items: center;
     justify-content: space-between;
+    padding: 0 1rem;
+    background-color: var(--color-header);
+    position: relative;
+    /* height: 130px; */
+    width: 100%;
 }
 
-.spacing {
-    display: block;
-    width: 32vw;
+#spacing {
+    flex: 1;
+}
+
+#logo-container {
+    display: flex;
+    justify-content: center;
+    flex: 1;
+    z-index: 1;
 }
 
 #logo {
+    /* display: block;
+    position: absolute;
+    left: 47%;
+    margin: 0 auto; */
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    display: block;
-    margin: 0 auto;
+    height: auto;
+    object-fit: contain;
 }
+
+#nav-cointainer {
+    /* position: relative;
+    right: 20px;
+    flex-direction: row; */
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+}
+
 
 #nav-bar {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
+    gap: 0.75rem;
     flex-wrap: wrap;
+    /* justify-content: center;
+    align-items: center; */
 }
 
 .nav-button {
@@ -191,7 +214,6 @@ hr {
     width: 100%;
     box-sizing: border-box;
 }
-
 .form-component:focus {
     border-color: var(--color-header);
     outline: none;
@@ -207,9 +229,28 @@ hr {
     margin-top: 10px;
     transition: var(--transicion);
 }
-
 .form-button:hover {
     background-color: var(--color-header2);
+}
+
+#get-container {
+    margin: 0;
+}
+
+.product-item {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    padding-right: 10px;
+    border-radius: 3px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.product-item img {
+    max-height: 50px;
+    border: var(--color-header) solid 2px;
+    padding: 5px;
+    margin-right: 15px;
 }
 
 /* ELEMENTOS DEL FOOTER */
@@ -229,8 +270,20 @@ footer {
 /*  SECCION RESPONSIVENESS   */
 @media only screen and (max-width: 600px) {
 
-    .spacing {
+    #spacing {
         display: none;
+    }
+
+    header {
+        height: 150px;
+    }
+    
+    #logo-container {
+        margin-right: 30px;
+    }
+
+    #nav-cotainer {
+        max-width: 350px;
     }
 
     #titulo {
@@ -250,5 +303,5 @@ footer {
         flex-direction: column;
         align-items: center;
     }
-
+    
 }
