Se agregan comentarios a funciones, rutas, modelos y controladores

--- a/dashboard/src/views/editProduct.ejs
+++ b/dashboard/src/views/editProduct.ejs
@@ -104,6 +104,9 @@
 
         });
         
+        /**
+         *  Crea el formulario de modificación una vez filtrado el producto a editar
+         */
         function formularioPutProducto(event, product) {
             event.stopPropagation();
             console.log(product);
