--- a/dashboard/src/views/newProduct.ejs
+++ b/dashboard/src/views/newProduct.ejs
@@ -59,15 +59,15 @@
 
                 textDescription.textContent = "Nombre Estampa";
                 numberDescription.textContent = "Nro. Camiseta Estampa";
-                qualityValue1.textContent = "Jugador"; qualityValue1.value = "jugador";
-                qualityValue2.textContent = "Hincha"; qualityValue2.value = "hincha";
+                qualityValue1.textContent = "Jugador"; qualityValue1.value = "Jugador";
+                qualityValue2.textContent = "Hincha"; qualityValue2.value = "Hincha";
 
             } else if (productTypeSelect.value === "Botines") {
 
                 textDescription.textContent = "Modelo";
                 numberDescription.textContent = "Talle";
-                qualityValue1.textContent = "Césped"; qualityValue1.value = "tapón acero";
-                qualityValue2.textContent = "Sintético"; qualityValue1.value = "tapón goma";
+                qualityValue1.textContent = "Césped"; qualityValue1.value = "Césped";
+                qualityValue2.textContent = "Sintético"; qualityValue1.value = "Sintético";
             }
         });
         
