Comentarios y corecciones adicionales al crud (2)

--- a/dashboard/src/views/editProduct.ejs
+++ b/dashboard/src/views/editProduct.ejs
@@ -197,15 +197,15 @@
 
                     textDescription.textContent = "Estampa";
                     numberDescription.textContent = "Nro. Camiseta";
-                    qualityValue1.textContent = "Jugador"; qualityValue1.value = "jugador";
-                    qualityValue2.textContent = "Hincha"; qualityValue2.value = "hincha";
+                    qualityValue1.textContent = "Jugador"; qualityValue1.value = "Jugador";
+                    qualityValue2.textContent = "Hincha"; qualityValue2.value = "Hincha";
 
                 } else if (productTypeSelect.value === "shoes") {
 
                     textDescription.textContent = "Modelo";
                     numberDescription.textContent = "Talle";
-                    qualityValue1.textContent = "Césped"; qualityValue1.value = "tapón acero";
-                    qualityValue2.textContent = "Sintético"; qualityValue1.value = "tapón goma";
+                    qualityValue1.textContent = "Césped"; qualityValue1.value = "Céspedo";
+                    qualityValue2.textContent = "Sintético"; qualityValue1.value = "Sintético";
                 }
             });
 
