--- a/dashboard/src/views/removeProduct.ejs
+++ b/dashboard/src/views/removeProduct.ejs
@@ -70,7 +70,7 @@
                 mostrarProducto(producto);
 
                 let deleteProduct_btn = document.getElementById("delete-product-btn");
-                deleteProduct_btn.addEventListener("click", (event) => {                /*  Flujo Administrador | 11. El administrador elige un producto activo para eliminar. Presiona el botón eliminar de ese producto. */
+                deleteProduct_btn.addEventListener("click", async (event) => {          /*  Flujo Administrador | 11. El administrador elige un producto activo para eliminar. Presiona el botón eliminar de ese producto. */
                     event.stopPropagation();
 
                     let confirmation = confirm("¿Quiere eliminar este producto?");      /*  Flujo Administrador | 12. Se muestra un modal que pregunta si está seguro de eliminar. El administrador presiona el botón confirmar. */
@@ -78,7 +78,7 @@
                     if(!confirmation) {
                         alert("Acción cancelada.");
                     } else {
-                        eliminarProducto(idProd)                                         /*  Flujo Adminsitrador | 13. El producto eliminado pasa a mostrarse en estado inactivo (baja lógica).  */
+                        eliminarProducto(idProd)                                        /*  Flujo Adminsitrador | 13. El producto eliminado pasa a mostrarse en estado inactivo (baja lógica).  */
                         .then(mostrarProducto(prod));
                     }
                 });
@@ -103,7 +103,7 @@
                     <li class="product-item">
                         <img src="${prod.image}" alt="${prod.nombre}" class="product-img">
                         <p>ID: ${prod.id} / ${prod.product_type} ${prod.quality} ${prod.desc_text} N°${prod.desc_number} / <strong>Precio: $${prod.price}</strong> / ${prod.active ? "[Activo]" : "[Inactivo]"}</p>
-                        <input type="button" class="form-button form-component" id="delete-product-btn" value="Eliminar producto">
+                        <input type="button" class="form-button form-component" id="delete-product-btn" value="Eliminar Producto">
                     </li>
                 `;
             product_list.innerHTML = HTMLProducto;
@@ -125,9 +125,7 @@
 
                 if(response.ok) {
 
-                    alert("FUNCIONÓ!!");
                     alert(result.message);
-                    //product_list.innerHTML = ``;
                     return true;
 
                 } else {
