--- a/dashboard/src/views/partials/header.ejs
+++ b/dashboard/src/views/partials/header.ejs
@@ -17,6 +17,10 @@
             <a href="/dashboard/newProduct"><button class="nav-button" id="btn-new-product">Agregar Producto</button></a>
             <a href="/dashboard/editProduct"><button class="nav-button" id="btn-edit-product">Modificar Producto</button></a>
             <a href="/dashboard/removeProduct"><button class="nav-button" id="btn-remove-product">Eliminar Producto</button></a>
+            <!-- Falta implementar desde aqui -->
+            <a href="/dashboard/sales"><button class="nav-button" id="btn-remove-product">Ventas</button></a>
+            <a href="/dashboard/newAdmin"><button class="nav-button" id="btn-remove-product">Crear Administrador</button></a>
+            <!-- Falta implementar hasta aqui -->
             <a href="http://localhost:5500/frontend/home.html"><button class="nav-button" id="btn-exit">Salir</button></a>
         </nav>
     </div>
