push previo demo2

--- a/dashboard/src/public/css/styles.css
+++ b/dashboard/src/public/css/styles.css
@@ -248,6 +248,7 @@ hr {
 }
 .product-item img {
     max-height: 50px;
+    min-width: 50px;
     border: var(--color-header) solid 2px;
     border-radius: 5px;
     padding: 5px;
