--- a/dashboard/src/views/partials/header.ejs
+++ b/dashboard/src/views/partials/header.ejs
@@ -21,7 +21,7 @@
             <a href="/dashboard/sales"><button class="nav-button" id="btn-remove-product">Ventas</button></a>
             <a href="/dashboard/newAdmin"><button class="nav-button" id="btn-remove-product">Crear Administrador</button></a>
             <!-- Falta implementar hasta aqui -->
-            <a href="http://localhost:5500/frontend/home.html"><button class="nav-button" id="btn-exit">Salir</button></a>
+            <a href="http://localhost:5500/TpintegradorFront_Grupo5/frontend/home.html"><button class="nav-button" id="btn-exit">Salir</button></a>
         </nav>
     </div>
 </header>
